Horizonriver QA20-Mar-2017/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Opportunity Product (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Opportunity_Product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Opportunity Product (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Opportunity_Product2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>PricebookEntry.Product2.AcctSeed__Unit_Cost__c</formula>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpenseGLAccount__c</fullName>
        <formula>PricebookEntry.Product2.AcctSeed__Expense_GL_Account__c</formula>
        <label>Expense GL Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InventoryGLAccount__c</fullName>
        <formula>PricebookEntry.Product2.AcctSeed__Inventory_GL_Account__c</formula>
        <label>Inventory GL Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenueGLAccount__c</fullName>
        <formula>PricebookEntry.Product2.AcctSeed__Revenue_GL_Account__c</formula>
        <label>Revenue GL Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Taxs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Tax?</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>AcctSeed__Project_Task_Required_With_Project</fullName>
        <active>true</active>
        <description>Rule ensures a Project Task is Required if the Project field is used.</description>
        <errorConditionFormula>NOT(ISBLANK(AcctSeed__Project__c)) &amp;&amp; ISBLANK(AcctSeed__Project_Task__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project_Task__c</errorDisplayField>
        <errorMessage>A Project Task is required if a Project is selected.</errorMessage>
    </validationRules>
</CustomObject>